# Autonomous_Financial_Research_agent

./: .env.example  .gitignore  Makefile  README.md  RUN_ME.ps1  START_ARA1.bat  alembic.ini  check_config.py  check_db.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.ps1  start_dev.ps1  test_api.ps1  test_db.py
.github/workflows/: ci.yml
backend/: __init__.py
backend/agents/: earnings_transcript_agent.py  evaluation_agent.py  fact_verification_agent.py  financial_data_agent.py  news_intelligence_agent.py  planner_agent.py  report_writer_agent.py  sec_research_agent.py  synthesis_agent.py
backend/api/: main.py  websocket.py
backend/api/routes/: __init__.py  (+5 more)
backend/conflict/: resolver.py
backend/core/: config.py  errors.py  logging.py  metrics.py  retry.py  utils.py
backend/db/: __init__.py  database.py  models.py  session.py
backend/evaluation/: __init__.py  benchmarks.py  metrics.py
backend/graph/: state.py  workflow.py
backend/memory/: episodic.py  long_term.py  short_term.py
backend/rag/: pipeline.py
backend/tests/: conftest.py
backend/tools/: __init__.py  calculation_engine.py  company_profile.py  earnings_transcript.py  fact_checker.py  financial_data_api.py  market_data_tool.py  news_search.py  peer_comparison.py  registry.py  report_generator.py  risk_analysis_tool.py  sec_filing_search.py  sentiment_analysis.py  vector_db_ops.py  web_search.py
docker/: Dockerfile.backend  Dockerfile.frontend  init.sql  nginx.conf  prometheus.yml
frontend/: index.html
frontend/src/: app.js
infra/: redis.conf
(+12 files in other folders)
