[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ara-1"
version = "1.0.0"
description = "ARA-1: Autonomous Financial Research Agent"
authors = [{ name = "ARA-1 Team" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | backend/db/migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend"]
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["backend/db/migrations"]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "backend/db/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
exclude = ["backend/db/migrations"]
